Model Cleanup. Added Configuration Model

--- a/LeaderboardAPI/appsettings.json
+++ b/LeaderboardAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "LeaderboardDatabaseSettings": {
+    "UsersCollectionName": "Users",
+    "ScoresCollectionName": "Scores",
+    "ConnectionString": "mongodbURL",
+    "DatabaseName": "MONGODB_DATABASE"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
